[gd_scene load_steps=5 format=3 uid="uid://fr3ebls2fdin"]

[ext_resource type="Script" uid="uid://12qqalidh605" path="res://test/scenarios/resource_management/resource_management_v_1.gd" id="1_aipxq"]
[ext_resource type="Texture2D" uid="uid://carrwrkn2qjxp" path="res://test/scenarios/resource_management/icons.png" id="2_2fmp3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2fmp3"]
texture = ExtResource("2_2fmp3")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0

[sub_resource type="TileSet" id="TileSet_cv50w"]
sources/0 = SubResource("TileSetAtlasSource_2fmp3")

[node name="ResourceManagement-v1" type="Node2D"]
script = ExtResource("1_aipxq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 589.0
offset_bottom = 58.0

[node name="RateStats" type="RichTextLabel" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "hello"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "||"

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "|>"

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ">>>"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_cv50w")
format = 2
layer_0/tile_data = PackedInt32Array(393232, 0, 0, 327696, 458752, 0, 458768, 65536, 1, 458769, 458752, 1, 524304, 0, 2, 524305, 0, 2, 589840, 131072, 3, 524303, 65536, 3)
